--- a/src/PersonalFinanceTracker_EnterpriseEdition.Api/appsettings.json
+++ b/src/PersonalFinanceTracker_EnterpriseEdition.Api/appsettings.json
@@ -84,7 +84,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=103.6.169.236;Port=5432;Database=PersonalFinanceTracker_EnterpriseEdition;User Id=postgres;Password=shunchaki21"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=finance_db;User Id=postgres;Password=postgres"
   },
   "JWT": {
     "Key": "Yq3t6w9z$C&F)H@McQfTjWnZr4u7x!A%",
