--- a/src/PersonalFinanceTracker_EnterpriseEdition.Application/PersonalFinanceTracker_EnterpriseEdition.Application.csproj
+++ b/src/PersonalFinanceTracker_EnterpriseEdition.Application/PersonalFinanceTracker_EnterpriseEdition.Application.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
+        <PackageReference Include="ClosedXML" Version="0.105.0" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
