Update Docker Compose configuration, upgrade PostgreSQL version, and enhance logging setup
- Added volume mappings for logs and wwwroot in docker-compose.yml.
- Upgraded PostgreSQL image from version 15 to 17.
- Enhanced Serilog configuration in appsettings.json for better logging, including console output and additional properties.
- Updated logging setup in Program.cs to create log directories based on the environment.
- Refactored ExcelExportWorker to improve export path handling and logging.
- Modified various controllers to return more specific ActionResult types for better API responses.
- Added validation for user sign-up and sign-in processes.
- Updated caching service integration in TransactionService and UserService.
- Removed obsolete migration files from the infrastructure layer.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,12 @@ services:
     depends_on:
       - db
       - redis
+    volumes:
+      - ./logs:/var/log/personalfinancetracker
+      - ./wwwroot:/app/wwwroot
 
   db:
-    image: postgres:15
+    image: postgres:17
     restart: always
     environment:
       POSTGRES_DB: finance_db
