--- a/src/PersonalFinanceTracker_EnterpriseEdition.Api/appsettings.Production.json
+++ b/src/PersonalFinanceTracker_EnterpriseEdition.Api/appsettings.Production.json
@@ -12,7 +12,8 @@
         "Microsoft.AspNetCore": "Warning",
         "Microsoft.EntityFrameworkCore": "Warning",
         "System": "Warning",
-        "Microsoft.Extensions.Hosting": "Information"
+        "Microsoft.Extensions.Hosting": "Information",
+        "Microsoft.Extensions.Caching": "Warning"
       }
     },
     "Enrich": [
@@ -25,57 +26,78 @@
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}",
+          "restrictedToMinimumLevel": "Warning"
         }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/application-.log",
+          "path": "/var/log/personalfinancetracker/application-.log",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{SourceContext}] [{MachineName}] [{ProcessId}] [{ThreadId}] {Message:lj}{NewLine}{Exception}",
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true,
-          "fileSizeLimitBytes": 10485760,
-          "retainedFileCountLimit": 30,
-          "retainedFileTimeLimit": "30.00:00:00",
-          "shared": true,
-          "flushToDiskInterval": "00:00:01"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/error-.log",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{SourceContext}] [{MachineName}] [{ProcessId}] [{ThreadId}] {Message:lj}{NewLine}{Exception}",
-          "rollingInterval": "Day",
-          "rollOnFileSizeLimit": true,
-          "fileSizeLimitBytes": 10485760,
+          "fileSizeLimitBytes": 52428800,
           "retainedFileCountLimit": 30,
           "retainedFileTimeLimit": "30.00:00:00",
           "shared": true,
           "flushToDiskInterval": "00:00:01",
-          "restrictedToMinimumLevel": "Error"
+          "buffered": false
         }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/audit-.log",
+          "path": "/var/log/personalfinancetracker/error-.log",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{SourceContext}] [{MachineName}] [{ProcessId}] [{ThreadId}] {Message:lj}{NewLine}{Exception}",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "fileSizeLimitBytes": 52428800,
+          "retainedFileCountLimit": 30,
+          "retainedFileTimeLimit": "30.00:00:00",
+          "shared": true,
+          "flushToDiskInterval": "00:00:01",
+          "restrictedToMinimumLevel": "Error",
+          "buffered": false
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/var/log/personalfinancetracker/audit-.log",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}",
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true,
-          "fileSizeLimitBytes": 10485760,
+          "fileSizeLimitBytes": 52428800,
           "retainedFileCountLimit": 90,
           "retainedFileTimeLimit": "90.00:00:00",
           "shared": true,
           "flushToDiskInterval": "00:00:01",
-          "restrictedToMinimumLevel": "Information"
+          "restrictedToMinimumLevel": "Information",
+          "buffered": false
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/var/log/personalfinancetracker/performance-.log",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "fileSizeLimitBytes": 52428800,
+          "retainedFileCountLimit": 30,
+          "retainedFileTimeLimit": "30.00:00:00",
+          "shared": true,
+          "flushToDiskInterval": "00:00:01",
+          "restrictedToMinimumLevel": "Information",
+          "buffered": false
         }
       }
     ],
     "Properties": {
       "Application": "PersonalFinanceTracker_EnterpriseEdition",
-      "Environment": "Development"
+      "Environment": "Production",
+      "Version": "1.0.0"
     }
   },
   "Logging": {
@@ -83,17 +105,21 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore": "Warning",
-      "PersonalFinanceTracker_EnterpriseEdition": "Information"
+      "PersonalFinanceTracker_EnterpriseEdition": "Information",
+      "Microsoft.Extensions.Hosting": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=finance_db;User Id=postgres;Password=12345"
+    "DefaultConnection": "Host=db;Port=5432;Database=finance_db;Username=postgres;Password=postgres"
   },
   "JWT": {
     "Key": "Yq3t6w9z$C&F)H@McQfTjWnZr4u7x!A%",
     "Audience": "PersonalFinanceTracker_EnterpriseEdition",
-    "Issuer": "http://localhost:5163",
-    "Expire": 1
+    "Issuer": "https://yourdomain.com",
+    "Expire": 24
+  },
+  "Redis": {
+    "Configuration": "redis:6379"
   }
 }
