--- a/src/PersonalFinanceTracker_EnterpriseEdition.Api/PersonalFinanceTracker_EnterpriseEdition.Api.csproj
+++ b/src/PersonalFinanceTracker_EnterpriseEdition.Api/PersonalFinanceTracker_EnterpriseEdition.Api.csproj
@@ -12,6 +12,10 @@
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
+        <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+        <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
 		<PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
@@ -27,6 +31,7 @@
 
     <ItemGroup>
       <Folder Include="Controllers\" />
+      <Folder Include="wwwroot\exports\" />
     </ItemGroup>
 
 </Project>
